# SOLIDproject

./: CMakeLists.txt  CacheManager.h  ClientHandler.h  FileCacheManager.cpp  FileCacheManager.h  HandleSolver.h  Lexer.cpp  Lexer.h  Main.cpp  Main.h  MatrixSearchable.h  MyParallelServer.cpp  MyParallelServer.h  MyTestClientHandler.cpp  MyTestClientHandler.h  Searchable.h  Searcher.h  Server.h  Solver.h  State.h
